--- a/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
+++ b/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <h1 class="white-word" style="text-align:center;font-family:'Arial';padding-top:10px;">Have you ever see these plant</h1>
+    <h1 class="white-word" style="text-align:center;font-family:'Arial';padding-top:10px;">Have You Ever Seen These Plant in Your Garden?</h1>
 
     @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
     {
