--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
                     <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
                     <br>
                     <div style="text-align:center">
-                        <a class="btn btn-success" href="@Url.Content("~/Dashboard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:7%;width:100px;height:30px">Learn more) </a>
+                        <a class="btn btn-success" href="@Url.Content("~/Dashboard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:7%;width:100px;height:30px">Learn more </a>
                     </div>
                 </div>
             </div>
