--- a/PlottedAssist/Views/PlantSets/Details.cshtml
+++ b/PlottedAssist/Views/PlantSets/Details.cshtml
@@ -25,7 +25,7 @@
         <img class="col-xs-8 col-lg-8 col-lg-offset-2 col-xs-offset-2" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:20px" src="@Url.Content("~/Picture/PlantSet/"+Model.PlantPhotoPath)">
         <!--Add plant button-->
         <div class="col-xs-8 col-lg-8 col-lg-offset-2 col-xs-offset-2" style="text-align: center; font-family: 'Arial';margin-top:5%;margin-bottom:5%">
-            <a href="@Url.Content("~/Dashboard/Create/" + Model.Id)" class="btn btn-default" style="background: #344239; color:white; text-align: center;border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;">Add to my gargen</a>
+            <a href="@Url.Content("~/Dashboard/Create/" + Model.Id)" class="btn btn-default" style="background: #344239; color:white; text-align: center;border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;">Add to my garden</a>
         </div>
         
         <dl class="col-xs-12 col-lg-12 dl-horizontal white-word">
