--- a/PlottedAssist/Views/PlantSets/GetPlantData.cshtml
+++ b/PlottedAssist/Views/PlantSets/GetPlantData.cshtml
@@ -65,10 +65,11 @@
             </div>
         }
 
+    <div class="col-xs-12 col-sm-8 col-sm-offset-1 col-md-8 col-lg-8 col-lg-offset-2">
         @foreach (var item in Model)
         {
             <!--Plant display-->
-            <div class="col-12 col-sm-3 col-md-3 col-lg-3 col-lg-offset-1" style="margin-bottom:5%">
+            <div class="col-xs-8 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-3" style="margin-bottom:5%">
                 <div class="card" style="padding:25px;width:280px;margin-top:20px;border-radius:15px;">
                     <a href="@Url.Content("~/PlantSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;padding:0px;margin:0px">
                         <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
@@ -81,4 +82,5 @@
 
             </div>
         }
-    </div>        
+    </div>
+</div>        
