--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -22,7 +22,7 @@
     <!--Filter-->
     @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
     {
-        <div class="col-12 col-sm-6 col-md-12 col-lg-12" style="text-align: center; margin-top: 20px; position: relative">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center; margin-top: 20px; position: relative">
             <div class="btn-group-lg" role="group" aria-label="..." style="margin-top:20px;position:relative">
                 <h4 class="white-word">Plant type</h4>
 
@@ -64,21 +64,22 @@
             </div>
         </div>
     }
+    <div class="col-xs-12 col-sm-8 col-sm-offset-1 col-md-8 col-lg-8 col-lg-offset-2">
+        @foreach (var item in Model)
+        {
+            <!--Plant display-->
+            <div class="col-xs-8 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-3" style="margin-bottom:5%">
+                <div class="card" style="padding:25px;width:280px;margin-top:20px;border-radius:15px;">
+                    <a href="@Url.Content("~/PlantSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;padding:0px;margin:0px">
+                        <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
+                       <div style="position:relative;margin-top:-75px;background-color:rgba(0,0,0,0.5);border-radius:15px;"> 
+                            <p class="white-word" style="font-size:16px;padding-top:10px;margin-left:15px;">@Html.DisplayFor(modelItem => item.PlantCommonName)</p>
+                            <p class="white-word" style="font-size:16px;margin-bottom:0px;padding-bottom:10px;margin-left:15px;">@Html.DisplayFor(modelItem => item.PlantSciName)</p>
+                       </div>
+                    </a>
+                </div>
 
-    @foreach (var item in Model)
-    {
-        <!--Plant display-->
-        <div class="col-12 col-sm-3 col-md-3 col-lg-3 col-lg-offset-1" style="margin-bottom:5%">
-            <div class="card" style="padding:25px;width:280px;margin-top:20px;border-radius:15px;">
-                <a href="@Url.Content("~/PlantSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;padding:0px;margin:0px">
-                    <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
-                   <div style="position:relative;margin-top:-75px;background-color:rgba(0,0,0,0.5);border-radius:15px;"> 
-                        <p class="white-word" style="font-size:16px;padding-top:10px;margin-left:15px;">@Html.DisplayFor(modelItem => item.PlantCommonName)</p>
-                        <p class="white-word" style="font-size:16px;margin-bottom:0px;padding-bottom:10px;margin-left:15px;">@Html.DisplayFor(modelItem => item.PlantSciName)</p>
-                   </div>
-                </a>
             </div>
-
-        </div>
-    }
+        }
+    </div>
 </div>        
