--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -26,7 +26,7 @@
         {
     <div style="text-align:center;">
         
-        <div class="btn-group-lg col-12 col-sm-6 col-md-12 col-lg-12" role="group" aria-label="Flower color">
+        <div class="btn-group-lg col-12 col-sm-12 col-md-12 col-lg-12" role="group" aria-label="Flower color">
             <h1 class="white-word" style="text-align:center;font-family:'Arial';margin-top:10px;">Have You Ever Seen These Plant in Your Garden?</h1>
             <h4 class="white-word">Flower color</h4>
 
@@ -50,16 +50,19 @@
     </div>
         }
 
-        @foreach (var item in Model)
-        {
-            <!--Weed display-->
-
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-lg-offset-1" style="margin-bottom:5%">
-                <div class="card" style="padding:15px;width:200px;margin-top:20px;border-radius:15px;">
-                    <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;padding:0px;">
-                        <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
-                    </a>
-                </div>
-            </div>
-        }
+        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-2">
+            @foreach (var item in Model)
+            {
+                <!--Weed display-->
+            
+                    <div class="col-xs-6 col-sm-5 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1" style="margin-bottom:5%;">
+                        <div class="card" style="padding:15px;width:200px;margin-top:20px;border-radius:15px;">
+                            <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;padding:0px;">
+                                <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
+                            </a>
+                        </div>
+                    </div>
+            
+            }
+        </div>
     </div>
