--- a/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
+++ b/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
@@ -10,7 +10,7 @@
 }
 
 
-<div class="row" style="padding:50px;background-color:#344239;">
+<div class="row" style="background-color:#344239;">
 
     <!--Header-->>
 
@@ -47,16 +47,19 @@
             </div>
         </div>
     }
+<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-2">
     @foreach (var item in Model)
     {
         <!--Weed display-->
 
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-lg-offset-1" style="margin-bottom:5%">
+        <div class="col-xs-6 col-sm-5 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1" style="margin-bottom:5%;">
             <div class="card" style="padding:15px;width:200px;margin-top:20px;border-radius:15px;">
-                <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;padding:0px;">
+                <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;padding:0px;">
                     <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
                 </a>
             </div>
         </div>
+
     }
+</div>
 </div>
