--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -50,7 +50,7 @@
         </div>
 
         <div class="form-group">
-            <div class="control-label col-sm-2">Prun Frquency</div>
+            <div class="control-label col-sm-2">Prune Frquency</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantPruningFrq Days
                 @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @type = "number", @class = "text-danger" })
@@ -58,7 +58,7 @@
         </div>
 
         <div class="form-group">
-            <div class="control-label col-sm-2">Fertilizer Frquency</div>
+            <div class="control-label col-sm-2">Fertilize Frquency</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } }) Recommended frequency: @ViewBag.PlantFertilizerFrq Days
                 @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @type = "number", @class = "text-danger" })
