--- a/PlottedAssist/Views/Dashboard/Edit.cshtml
+++ b/PlottedAssist/Views/Dashboard/Edit.cshtml
@@ -47,7 +47,7 @@
             </div>
 
             <div class="form-group">
-                <div class="control-label col-sm-2">Prun Frquency</div>
+                <div class="control-label col-sm-2">Prune Frquency</div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.PlantPruningFrq, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PlantPruningFrq, "", new { @class = "text-danger" })
@@ -55,7 +55,7 @@
             </div>
 
             <div class="form-group">
-                <div class="control-label col-sm-2">Fertilizer Frquency</div>
+                <div class="control-label col-sm-2">Fertilize Frquency</div>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.PlantFertilizerFrq, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PlantFertilizerFrq, "", new { @class = "text-danger" })
