--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -19,7 +19,8 @@
             <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
         </div>
         <div class="col-xs-8 col-sm-6" style="margin-top:5%;position:relative;margin-bottom:5%">
-            <img class="col-xs-12 col-lg-8 col-lg-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:40px;position:relative" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
+            
+            <img class="col-xs-6 col-lg-6 col-lg-offset-3 col-xs-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:40px;position:relative" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
             <dl class="col-xs-12 col-lg-12  dl-horizontal white-word">
                 <dt>
                     Common Name
