Made changes for hot fixes.

--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -34,7 +34,7 @@
         <br>
         <br>
         <div class="col-sm-12 white-word form-group">
-            <h1 style="font-size:16px;">1. What type plants do you want to pant? <a href="@Url.Content("~/PlantSets/Instrction/")"><img src="~/Picture/Icon/Tooltip_icon.png" height="15"></a></h1>
+            <h1 style="font-size:16px;">1. What type of plants do you want to pant? <a href="@Url.Content("~/PlantSets/Instrction/")"><img src="~/Picture/Icon/Tooltip_icon.png" height="15"></a></h1>
             <div class="checkbox">
                 <label>
                     <input type="checkbox" name="Tree" value="Trees" checked="checked">Tree
