--- a/PlottedAssist/Views/Dashboard/Index.cshtml
+++ b/PlottedAssist/Views/Dashboard/Index.cshtml
@@ -62,7 +62,7 @@
                     @foreach (var item in Model)
                     {
                         <div class="col-md-8 col-md-offset-1 col-xs-12" style="border-radius:5px;">
-                            <div class="col-xs-12 col-md-12 col-lg-10" style="padding: 20px; border: thin; background: #1E2621; border-radius: 5px; box-shadow: 2px 2px 6px 2px #1E2621; margin-bottom: 40px;">
+                            <div class="col-xs-12 col-md-12 col-lg-10" style="padding: 20px; border: thin; background: #1E2621; border-radius: 5px; box-shadow: 2px 2px 6px 2px #1E2621; margin-bottom: 40px; width:100%;">
                                 <div class="col-xs-12 col-md-5 col-lg-5 white-word" style="border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;text-align:center">
                                     <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantSet.PlantPhotoPath)" style="border-radius:5px;box-shadow:0px 0px 8px 5px #1E2621;width:100%;height:100%;margin-left:-10%">
                                 </div>
@@ -96,9 +96,9 @@
                                 { @Html.DisplayFor(modelItem => item.PlantMistFrq)} days
                                 </div>
                                 <div class="col-xs-12 col-md-7 col-lg-6 col-lg-offset-1">
-                                    <br><a href="@Url.Content("../PlantSets/Details/"+ item.PlantSet.Id)" class="btn btn-default btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;font-size:10px;width:30%">Information</a>
-                                    <a href="@Url.Content("~/Dashboard/Edit/"+ item.Id)" class="btn btn-default btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:30%;font-size:10px"> Setting</a>
-                                    <a href="@Url.Content("~/Dashboard/Delete/"+ item.Id)" class="btn btn-default btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:30%;font-size:10px"> Remove</a>
+                                    <br><a href="@Url.Content("../PlantSets/Details/"+ item.PlantSet.Id)" class="btn btn-default btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;font-size:10px;width:35%">Information</a>
+                                    <a href="@Url.Content("~/Dashboard/Edit/"+ item.Id)" class="btn btn-default btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:28%;font-size:10px"> Setting</a>
+                                    <a href="@Url.Content("~/Dashboard/Delete/"+ item.Id)" class="btn btn-default btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:28%;font-size:10px"> Remove</a>
                                 </div>
                             </div>
                         </div>
