--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Invasion", "Index", "WeedSets")</li>
-                    <li>@Html.ActionLink("Indigene", "Index", "PlantSets")</li>
+                    <li>@Html.ActionLink("Invasive", "Index", "WeedSets")</li>
+                    <li>@Html.ActionLink("Indi Plants", "Index", "PlantSets")</li>
                     <li>@Html.ActionLink("My Garden", "Index", "Dashboard")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
