--- a/PlottedAssist/Views/Dashboard/Index.cshtml
+++ b/PlottedAssist/Views/Dashboard/Index.cshtml
@@ -24,7 +24,7 @@
                 <div class="col-md-3" style="border:0px;">
                     <div class="panel panel-primary white-word" style="background:#344239;border:0px;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;padding-left:10%;padding-right:10%">
                         <br>
-                        <h3 class="panel-title" style="text-align:center">Activity Today</h3>
+                        <h3 class="panel-title" style="text-align:center">Activity Due Today</h3>
                         <hr>
 
                         @if (ViewBag.today.Length == 1)
@@ -42,7 +42,7 @@
 
                     <div class="panel panel-primary white-word" style="background:#344239;border:0px;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;padding-left:10%;padding-right:10%">
                         <br>
-                        <h3 class="panel-title" style="text-align:center">Activity Tomorrow</h3>
+                        <h3 class="panel-title" style="text-align:center">Activity Due Tomorrow</h3>
                         <hr>
                         @if (ViewBag.tomorrow.Length == 1)
                         {<text>No Activity Tomorrow </text><br> }
