--- a/PlottedAssist/Views/PlantSets/Details.cshtml
+++ b/PlottedAssist/Views/PlantSets/Details.cshtml
@@ -21,7 +21,7 @@
         <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a> 
     </div>
     
-    <div class="col-sm-6" style="margin-top:5%; margin-bottom:10%;">
+    <div class="col-sm-6" style="margin-top:5%; margin-bottom:75px;">
         <img class="col-xs-6 col-lg-6 col-lg-offset-3 col-xs-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:20px" src="@Url.Content("~/Picture/PlantSet/"+Model.PlantPhotoPath)">
         <!--Add plant button-->
         <div class="col-xs-8 col-lg-8 col-lg-offset-2 col-xs-offset-2" style="text-align: center; font-family: 'Arial';margin-top:5%;margin-bottom:5%">
