--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -21,10 +21,7 @@
     </div>
 
     <!--Question part-->
-    <form role="form" action="/PlantSets/TestResult" method="post" class="col-sm-6 col-sm-offset-3 white-word" style="        font-family: 'Arial';
-        background: #344239;
-        margin-top: 5%;
-        margin-bottom: 5%">
+    <form role="form" action="/PlantSets/TestResult" method="post" class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 white-word" style="font-family: 'Arial';background: #344239;margin-top: 5%;margin-bottom: 130px">
         <div class="white-word" style="background:#344239;text-align:center;margin-top:10%;">
             <H3>Let us help you decide which to plant!</H3>
             <p>
@@ -58,7 +55,7 @@
                     <input type="radio" name="PlantWaterFrq" value="2">Often
                 </label><br>
                 <label>
-                    <input type="radio" name="PlantWaterFrq" value="4">Medium
+                    <input type="radio" name="PlantWaterFrq" value="4">Sometimes
                 </label><br>
                 <label>
                     <input type="radio" name="PlantWaterFrq" value="6">I don't have time
@@ -117,7 +114,7 @@
             </div>
         </div>
 
-        <div class="col-sm-12 white-word form-group" style="margin-top:5%;margin-bottom:5%;text-align:center">
+        <div class="col-sm-12 white-word form-group" style="margin-bottom:50px;text-align:center">
             <button type="submit" style="color:white; text-align: center;box-shadow:2px 2px 6px 2px #1E2621;background-color:transparent;">Submit</button>
         </div>
     </form>
