--- a/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
+++ b/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
@@ -59,7 +59,7 @@
     {
         <!--Weed display-->
 
-        <div class="col-xs-10 col-xs-offset-2  col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3 col-lg-offset-1" style="margin-bottom:5%;">
+        <div class="col-xs-10 col-xs-offset-2  col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3 col-lg-offset-1" style="margin-bottom:75px;">
             <div class="card" style="padding:15px;width:200px;margin-top:20px;border-radius:15px;">
                 <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;padding:0px;">
                     <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
