--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title</title>
+    <title>PlottedPlants</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+    <link rel="icon" href=@Url.Action("~/Picture/logo_tab.png")>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top" style="opacity:0.8">
@@ -17,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="~/Home/Index" style="padding-top:10px;"><img id="logo" src="~/Picture/logo.png" height="30"></a>           
+                <a class="navbar-brand" href="~/Home/Index" style="padding-top:10px;"><img id="logo" src="~/Picture/logo.png" height="30"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -32,15 +33,15 @@
     </div>
     <div class="container-fluid body-content" style="margin-top:0px;padding-right:0px;padding-left:0px;">
         @RenderBody()
-        
-        
+
+
     </div>
     <footer style="background-color:black;">
         <br>
         <p style="text-align:center;">&copy; @DateTime.Now.Year - Plotted Plant</p>
         <br>
     </footer>
-    
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
