Added Static Pages

--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -35,7 +35,12 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plant Info <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Nurseries", "Nurseries", "PlantInfo")</li>
-                            
+                            <li>@Html.ActionLink("Correct Planting Techniques", "PlantTech", "SoilType")</li>
+                            <li>@Html.ActionLink("Watering Guide", "WateringGuide", "SoilType")</li>
+                            <li>@Html.ActionLink("Soil Types", "SoilTypes", "SoilType")</li>
+                            <li>@Html.ActionLink("Why Prune", "Prune", "SoilType")</li>
+                            <li>@Html.ActionLink("Other Cares", "OtherCare", "SoilType")</li>
+                            <li>@Html.ActionLink("Wildlife Friendly Tips", "WildlifeTips", "SoilType")</li>
                         </ul>
                     </li>
                 </ul>
